--- a/part2/index2.html
+++ b/part2/index2.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>часть2</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="slider">
-      <h1>Зоопарк</h1>
-      <div class="slider_img">
-        <img src="./assets2/images/alligatorpng.png" alt="Крокодил" />
-        <img src="./assets2/images/eaglepng.png" alt="Орёл" />
-        <img src="./assets2/images/gorillapng.png" alt="Горилла" />
+    <div class="container">
+      <div class="slider">
+        <div class="slider_img">
+          <img src="./assets2/images/1.jpg" alt="Картинка" />
+          <img src="./assets2/images/2.jpg" alt="Картинка" />
+          <img src="./assets2/images/4.jpg" alt="Картинка" />
+          <img src="./assets2/images/5.jpg" alt="Картинка" />
+        </div>
       </div>
       <div class="slider_button">
-        <button class="left">Назад</button>
-        <button class="right">Вперёд</button>
+        <button class="prev">Назад</button>
+        <button class="next">Вперёд</button>
       </div>
     </div>
+    <script src="index2.js"></script>
   </body>
 </html>
