--- a/part3/index3.html
+++ b/part3/index3.html
@@ -7,6 +7,13 @@
     <title>со звездочкой</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Калькулятор високосных годов</h1>
+      <p>Введите год</p>
+      <input class="year"></input>
+      <button class="btn">Узнать</button>
+      <p class="result">Результат</p>
+    </div>
     <script src="index3.js"></script>
   </body>
 </html>
