--- a/part3/index3.html
+++ b/part3/index3.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>со звездочкой</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Калькулятор високосных годов</h1>
-      <p>Введите год</p>
-      <input class="year"></input>
-      <button class="btn">Узнать</button>
-      <p class="result">Результат</p>
-    </div>
     <script src="index3.js"></script>
   </body>
 </html>
